test/fail/classes/class_constructor_return.lly
#[
SyntaxError: 'return' not allowed in a class constructor.
Where: File "class_constructor_return.lly" at line 8
]#

class example() {
    if 1:
        return self
}
